--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
         <title>Hot Single Milfs | Find Local Milfs for Dating & More</title>
         <meta name="title" content="Hot Single Milfs | Find Local Milfs for
             Dating & More">
-        <meta name="description" content="Find sexy MILFS in your area who love
-            Morrowind and modding. Search our sexy personals and date real MILFS
-            in your area and become a sugar baby for free!, Sexy Local Milfs">
+        <meta name="description" content="Find sexy MILFS in your area who love Morrowind and modding. Search our sexy personals and date real MILFS in your area and become a sugar baby for free!, Sexy Local Milfs">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url"
             content="https://amaliegay.github.io/meetmilfs/">
         <meta property="og:title" content="Hot Single Milfs | Find Local Milfs
             for Dating & More">
-        <meta property="og:description" content="Find sexy MILFS in your area
-            who love Morrowind and modding. Search our sexy personals and date
-            real MILFS in your area and become a sugar baby for free!, Sexy
-            Local Milfs">
+        <meta property="og:description" content="Find sexy MILFS in your area who love Morrowind and modding. Search our sexy personals and date real MILFS in your area and become a sugar baby for free!, Sexy Local Milfs">
         <meta property="og:image"
             content="https://amaliegay.github.io/meetmilfs/assets/images/social-preview.png">
         <!-- Twitter -->
@@ -32,10 +27,7 @@
             content="https://amaliegay.github.io/meetmilfs/">
         <meta property="twitter:title" content="Hot Single Milfs | Find Local
             Milfs for Dating & More">
-        <meta property="twitter:description" content="Find sexy MILFS in your
-            area who love Morrowind and modding. Search our sexy personals and
-            date real MILFS in your area and become a sugar baby for free!, Sexy
-            Local Milfs">
+        <meta property="twitter:description" content="Find sexy MILFS in your area who love Morrowind and modding. Search our sexy personals and date real MILFS in your area and become a sugar baby for free!, Sexy Local Milfs">
         <meta property="twitter:image"
             content="https://amaliegay.github.io/meetmilfs/assets/images/social-preview.png">
         <meta http-equiv="refresh" content="0;
