--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url"
-            content="https://amaliegay.github.io/meetmilfs/">
+            content="https://dev-chenxing.github.io/meetmilfs/">
         <meta property="og:title" content="Hot Single Milfs | Find Local Milfs
             for Dating & More">
         <meta property="og:description" content="Find sexy MILFS in your area who love Morrowind and modding. Search our sexy personals and date real MILFS in your area and become a sugar baby for free!, Sexy Local Milfs">
         <meta property="og:image"
-            content="https://amaliegay.github.io/meetmilfs/assets/images/social-preview.png">
+            content="https://dev-chenxing.github.io/meetmilfs/assets/images/social-preview.png">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url"
-            content="https://amaliegay.github.io/meetmilfs/">
+            content="https://dev-chenxing.github.io/meetmilfs/">
         <meta property="twitter:title" content="Hot Single Milfs | Find Local
             Milfs for Dating & More">
         <meta property="twitter:description" content="Find sexy MILFS in your area who love Morrowind and modding. Search our sexy personals and date real MILFS in your area and become a sugar baby for free!, Sexy Local Milfs">
         <meta property="twitter:image"
-            content="https://amaliegay.github.io/meetmilfs/assets/images/social-preview.png">
+            content="https://dev-chenxing.github.io/meetmilfs/assets/images/social-preview.png">
         <meta http-equiv="refresh" content="0;
             url=https://www.nexusmods.com/morrowind/" />
         <link rel="stylesheet" href="style.css" />
